[package]
edition = "2021"
name = "donkey-mule-horse"
version = "0.1.0"

[dependencies]
ip_network = "0.4"
ip_network_table = "0.2"
num-format = "0.4"
ptree = "0.4"
rotonda-store = { version = "0.2", git = "https://github.com/NLnetLabs/rotonda-store.git", rev = "70beea86b3d5d11f79d83db71796cda60497067f" }
routecore = "0.1"
time-graph = { version = "0.1", features = ["table"] }
trie = { git = "https://github.com/NLnetLabs/try-tries-and-trees" }
