[package]
edition = "2021"
name = "donkey-mule-horse"
version = "0.1.0"

[dependencies]
fixedbitset = "0.4"
ip_network = "0.4"
ip_network_table = "0.2"
num-format = "0.4"
ptree = "0.4"
rotonda-store = { version = "0.3.0-dev", git = "https://github.com/NLnetLabs/rotonda-store.git", rev = "6dce6a7e6d0675bb14dc33afd962f8c429d7b6b4" }
routecore = "0.1"
time-graph = { version = "0.1", features = ["table"] }
trie = { git = "https://github.com/NLnetLabs/try-tries-and-trees" }
